2005-12-13  Adam Jackson  <ajax@freedesktop.org>

	* Xext/Makefile.am:
	Spell it XINERAMA_SRCS, not PANORAMIX_SRCS.

2005-12-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/os-support/solaris/sun_kbdEv.c: 
	Remove unnecessary include of dgaproc.h that broke Solaris builds.

2005-12-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Xext/Makefile.am: 
	Bugzilla #4715 <https://bugs.freedesktop.org/show_bug.cgi?id=4715>
	Files in xserver/xorg/Xext not included in tarball after make dist

2005-12-09  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/xf8_32wid/Makefile.am:
	Bug #4809: Re-fix that doesn't break distcheck. (Alan Coopersmith)

2005-12-08  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #4361: Define XF86CONFIGFILE properly so config file generation
	works.

2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/dmx/doc/Makefile.am:
	* hw/xfree86/doc/sgml/Makefile.am:
	Fix sgml docs build.

2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Add configure option to set the top level font dir.

2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	Add configure options to allow hard-coded paths to be changed.

2005-12-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Change to use the app-defaults default dir configured in libXt.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Xprint/doc/Makefile.am:
	* doc/Makefile.am:
	* hw/dmx/Makefile.am:
	* hw/dmx/config/Makefile.am:
	* hw/vfb/Makefile.am:
	* hw/xfree86/getconfig/Makefile.am:
	* hw/xfree86/utils/gtf/Makefile.am:
	* hw/xfree86/utils/kbd_mode/Makefile.am:
	* hw/xfree86/utils/pcitweak/Makefile.am:
	* hw/xfree86/utils/scanpci/Makefile.am: