@@ -16,7 +16,10 @@ INCLUDES = -I@MESA_SOURCE@/include \
            -I$(top_srcdir)/GL/include \
            -I$(top_srcdir)/hw/xfree86/os-support
 
-AM_CFLAGS = $(DIX_CFLAGS) @SERVER_DEFINES@ @MODULE_DEFINES@ @LOADER_DEFINES@
+# -DXFree86Server is required because the X11 driver in Mesa thinks that
+# symbol means "being built in the server"
+AM_CFLAGS = $(DIX_CFLAGS) @SERVER_DEFINES@ @MODULE_DEFINES@ @LOADER_DEFINES@ \
+            -DXFree86Server
 
 libX_la_SOURCES = xf86glx.c \
                   xf86glx_util.c \
